Add zarcillo (aux k8s) CNAME
Related to https://gerrit.wikimedia.org/r/c/operations/puppet/+/1135382
and https://gerrit.wikimedia.org/r/c/operations/puppet/+/1135387

Bug: T384212
Change-Id: I0edf1bc72e6ada1214f6c12fc1409c6ce29f07a3

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -820,6 +820,7 @@ trace            1D IN CNAME dyna.wikimedia.org.
 os-reports       1D IN CNAME dyna.wikimedia.org.
 enterprise       1D IN CNAME dyna.wikimedia.org.
 unseen           1D IN CNAME dyna.wikimedia.org.
+zarcillo         1D IN CNAME dyna.wikimedia.org.
 wikitech-static      5M  IN A        192.237.162.200 ; wmf-zone-validator-ignore=MISSING_PTR_FOR_NAME_AND_IP
 wikitech-static      5M  IN AAAA     2001:4801:7821:77:be76:4eff:fe10:2ed5 ; wmf-zone-validator-ignore=MISSING_PTR_FOR_NAME_AND_IP
 wikitech-static                  1H IN TXT "v=spf1 include:mailgun.org -all"
