--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -295,7 +295,7 @@ measure-drmrs       1D IN CNAME upload-lb.drmrs.wikimedia.org.
 measure-magru       1D IN CNAME upload-lb.magru.wikimedia.org.
 
 ; HIBP confirm records
-lists 1H IN TXT "have-i-been-pwned-verification=dweb_hnnrkyzbb7lx94c9jjviv3md"
+gitlab 300 IN TXT "have-i-been-pwned-verification=dweb_36x21v820aq8mv0xpdt2mchf"
 
 ; Mobile
 
