--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -465,6 +465,7 @@ gerrit-replica  300 IN A        208.80.154.151
 gerrit-replica  300 IN AAAA     2620:0:861:2:208:80:154:151
 gerrit          300 IN A        208.80.153.104
 gerrit          300 IN AAAA     2620:0:860:4:208:80:153:104
+gerrit          300 IN TXT      "google-site-verification=ln5JczWUiGqT4sK3yohGgNDKCtUixySt94iBjJKrfak"
 
 ; Gitlab records
 gitlab 300 IN TXT "v=spf1 include:_cidrs.wikimedia.org ~all"
