wikimedia-ech.org: update zone file and add A/AAAA records
Per the RFC [0], outer ECH should also provide a valid TLS cert and it
currently does not since we point this domain to ncredir. Given that
there is only one service behind this, update the zone file to point
wikimedia-ech.org to the check service so that a valid cert is returned.

The check service is already set up with the correct SNI and listening
on the right IP addresses.

[0] - https://datatracker.ietf.org/doc/draft-ietf-tls-esni/

Bug: T205378
Change-Id: Ia6453719f696a337044a71d03af3122118f6c8a3

--- a/templates/wikimedia-ech.org
+++ b/templates/wikimedia-ech.org
@@ -1,1 +1,28 @@
-ncredir-parking
+; vim: set expandtab:smarttab
+; {{ serial_comment }}
+@ 1H IN SOA ns0.wikimedia.org. hostmaster.wikimedia.org. {{ serial_num }} 12H 2H 2W 1H
+
+; Name servers
+
+@           1D  IN NS   ns0.wikimedia.org.
+@           1D  IN NS   ns1.wikimedia.org.
+@           1D  IN NS   ns2.wikimedia.org.
+
+; Mail exchangers
+
+@           300 IN MX   10  mx-in1001.wikimedia.org.
+@           300 IN MX   10  mx-in2001.wikimedia.org.
+
+; SPF records
+@           600 IN TXT  "v=spf1 include:wikimedia.org ~all"
+
+; CAA records
+@           600 IN CAA 0 issue "letsencrypt.org"
+@           600 IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
+
+; A and AAAA records. Currently, the only inner ECH is check.wikimedia-dns.org,
+; see T205378 and so we point to that. When we deploy more services behind this,
+; then a proper cover page should be put in place. But for now, this should
+; return a valid TLS cert and hence we point to the check service.
+@           600 IN A    185.71.138.139
+@           600 IN AAAA 2001:67c:930::2
