--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -21,6 +21,8 @@ ns2         1D  IN A    198.35.27.27 ; anycasted authdns
 
 ; Google Webmaster Tools verification record for search management
 @           600 IN TXT  "google-site-verification=uzfgD0YiIqSQgRdSQXlkA7NByyyOZDp-n0SZ3nozpDM"
+; Google postmaster tools verification
+@           600 IN TXT  "google-site-verification=kNuWHjx0DQyl3xCPh6uGCRASncmkKK2d578rjruEFs8"
 ; 1Password site verification, requested in T352579
 @           600 IN TXT  "1password-site-verification=ZAZP5U62WJFMDDZKWJG7TPKFI4"
 
