--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -211,21 +211,55 @@ $INCLUDE netbox/wikimedia.org-drmrs
 $INCLUDE netbox/wikimedia.org-magru
 
 ; Fundraising tech hosts (no automation)
-civi1002        1H  IN A    208.80.155.17 ; wmf-zone-validator-ignore=TOO_MANY_PUBLIC_NAMES,MISSING_PTR_FOR_NAME_AND_IP
+analytics-codfw             1H  IN A    208.80.152.238
+analytics-eqiad             1H  IN A    208.80.155.4
+analytics-new-codfw         1H  IN A    208.80.152.231
+civi1002                    1H  IN A    208.80.155.17 ; wmf-zone-validator-ignore=TOO_MANY_PUBLIC_NAMES,MISSING_PTR_FOR_NAME_AND_IP
+civicrm                     1H  IN A    208.80.155.17
+civicrm-codfw               1H  IN A    208.80.152.232
 frack-default-nat-codfw     1H  IN A    208.80.152.230
 frack-default-nat-eqiad     1H  IN A    208.80.155.6
 frack-payments-nat-codfw    1H  IN A    208.80.152.229
 frack-payments-nat-eqiad    1H  IN A    208.80.155.7
-frbast-eqiad    1H  IN A    208.80.155.18
-frbast-codfw    1H  IN A    208.80.152.234
-frdata-eqiad    1H  IN A    208.80.155.16
-frdata-codfw    1H  IN A    208.80.152.237
-frdev-old-eqiad 1H  IN A    208.80.155.13
-frdev-eqiad     1H  IN A    208.80.155.14
-frmon-eqiad     1H  IN A    208.80.155.9
-frmon-codfw     1H  IN A    208.80.152.235
-frmx1001        1H  IN A    208.80.155.15
-frmx2001        1H  IN A    208.80.152.236
+frbast-eqiad                1H  IN A    208.80.155.18
+frbast-codfw                1H  IN A    208.80.152.234
+frdata-eqiad                1H  IN A    208.80.155.16
+frdata-codfw                1H  IN A    208.80.152.237
+frdev-eqiad                 1H  IN A    208.80.155.14
+frmon-eqiad                 1H  IN A    208.80.155.9
+frmon-codfw                 1H  IN A    208.80.152.235
+frmx1001                    1H  IN A    208.80.155.15
+frmx2001                    1H  IN A    208.80.152.236
+
+payments-a-codfw            1H  IN A    208.80.152.227
+payments-codfw              1H  IN A    208.80.152.228
+payments-eqiad              1H  IN A    208.80.155.5 ; wmf-zone-validator-ignore=MISSING_PTR_FOR_NAME_AND_IP
+payments-staging            1H  IN A    208.80.155.10
+
+payments-listener-codfw     1H  IN A    208.80.152.233
+payments-listener-eqiad     1H  IN A    208.80.155.19
+
+; Fundraising tech service aliases
+
+analytics-eqiad.frdev       1D  IN CNAME    analytics-eqiad
+analytics-codfw.frdev       1D  IN CNAME    analytics-codfw
+analytics.frdev             1H  IN CNAME    analytics-codfw.frdev
+civicrm.frdev               1H  IN CNAME    frdev-eqiad
+fundraising                 1H  IN CNAME    frdata-eqiad
+fundraising.frdev           1H  IN CNAME    frdata-eqiad
+frbast                      1H  IN CNAME    frbast-eqiad
+frdata                      1H  IN CNAME    frdata-eqiad
+frmon                       1H  IN CNAME    frmon-eqiad
+frmon.frdev                 1H  IN CNAME    frmon-eqiad
+metabase.frdev              1H  IN CNAME    analytics-codfw.frdev
+payments                    5M  IN CNAME    payments-eqiad
+payments-listener           5M  IN CNAME    payments-listener-eqiad
+payments-listener.frdev     1H  IN CNAME    frdev-eqiad
+reports.frdev               1H  IN CNAME    frdev-eqiad
+superset.frdev              1H  IN CNAME    analytics-codfw.frdev
+
+civicrm                     300 IN MX   10 mx-in1001
+civicrm                     300 IN MX   10 mx-in2001
 
 ; Service aliases
 
@@ -458,11 +492,6 @@ ldap-rw-next.eqiad   1H  IN CNAME    ldap-rw1001
 ldap-rw.codfw   1H  IN CNAME    serpens
 ldap-rw-next.codfw   1H  IN CNAME    ldap-rw2001
 
-frbast          1H  IN CNAME    frbast-eqiad
-frdata          1H  IN CNAME    frdata-eqiad
-frmon           1H  IN CNAME    frmon-eqiad
-frmon.frdev     1H  IN CNAME    frmon-eqiad
-
 gerrit                  300 IN A        208.80.154.151
 gerrit                  300 IN AAAA     2620:0:861:2:208:80:154:151
 gerrit-replica          300 IN A        208.80.153.104
@@ -527,16 +556,6 @@ netbox-exports  1D  IN CNAME    dyna.wikimedia.org.
 
 orchestrator    5M  IN CNAME    dborch1001
 
-payments         5M  IN CNAME payments-eqiad
-payments-eqiad   1H  IN A     208.80.155.5 ; wmf-zone-validator-ignore=MISSING_PTR_FOR_NAME_AND_IP
-payments-a-codfw 1H  IN A     208.80.152.227
-payments-codfw   1H  IN A     208.80.152.228
-payments-staging 1H  IN A     208.80.155.10
-
-payments-listener-eqiad 1H  IN A    208.80.155.19
-payments-listener-codfw 1H  IN A    208.80.152.233
-payments-listener       5M  IN CNAME        payments-listener-eqiad
-
 people          1D IN CNAME dyna.wikimedia.org.
 
 piwik           1D IN CNAME dyna.wikimedia.org.
@@ -564,8 +583,6 @@ releases         1D IN CNAME dyna.wikimedia.org.
 releases-jenkins 1D IN CNAME dyna.wikimedia.org.
 
 research         1D IN CNAME dyna.wikimedia.org.
-
-reports.frdev   1H  IN CNAME    frdev-eqiad
 
 rt              1H IN CNAME dyna.wikimedia.org.
 
@@ -725,9 +742,6 @@ airflow-search 1D IN CNAME dyna.wikimedia.org.
 airflow-test-k8s 1D IN CNAME dyna.wikimedia.org.
 airflow-wmde 1D IN CNAME dyna.wikimedia.org.
 analytics        1D IN CNAME dyna.wikimedia.org.
-analytics-eqiad.frdev  1D IN A     208.80.155.4
-analytics-codfw.frdev  1D IN A     208.80.152.238
-analytics.frdev  1H IN CNAME analytics-codfw.frdev
 blog             1H IN CNAME blog-wikimedia-org.go-vip.net.
 bugs             1D IN CNAME dyna.wikimedia.org.
 bugzilla         1D IN CNAME dyna.wikimedia.org.
@@ -739,11 +753,6 @@ gh-mail          1H  IN TXT  "v=spf1 include:mg-spf.greenhouse.io ~all"
 ; Updates requested in T348335
 email.gh-mail    1H  IN CNAME    mailgun.org.
 mailo._domainkey 1H  IN TXT      "k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDsCM/wv9cgbIAwNt2mDHSxgeEmwvvJW99zCdy9J2yuFykNA2r7ZEXjl33CsoEqODCorPFEsgn3zg8ixSetXcujgUR0YuNRYSbhnaK+lW1nDyjYsW2G6Snev7Wz20tpGMGIQbVQPMOJNSl5yoBnvZBPB5Uajvu0pZTcKJMSnlGd7wIDAQAB"
-civicrm          1H  IN A        208.80.155.17
-civicrm          300 IN MX       10 mx-in1001
-civicrm          300 IN MX       10 mx-in2001
-civicrm.frdev    1H  IN CNAME    frdev-eqiad
-civicrm-codfw    1H  IN A        208.80.152.232
 codesearch       1D IN CNAME dyna.wikimedia.org.
 coffee           1D IN CNAME dyna.wikimedia.org.
 cs               1D IN CNAME dyna.wikimedia.org.
@@ -754,14 +763,11 @@ datasets-config-next 1D IN CNAME dyna.wikimedia.org.
 diff             1H IN CNAME blog-wikimedia-org.go-vip.net.
 download         1D IN CNAME dyna.wikimedia.org.
 etherpad         1D IN CNAME dyna.wikimedia.org.
-fundraising      1H  IN CNAME    frdata-eqiad
-fundraising.frdev   1H  IN CNAME    frdata-eqiad
 jobs             1D IN CNAME dyna.wikimedia.org.
 labs             1D IN CNAME dyna.wikimedia.org.
 ; deprecated but kept for compatibility, see RT #6769
 labsconsole      1D IN CNAME dyna.wikimedia.org.
 logstash         1D IN CNAME dyna.wikimedia.org.
-metabase.frdev   1H IN CNAME analytics-codfw.frdev
 moon             1D IN CNAME dyna.wikimedia.org.
 mpic             1D IN CNAME dyna.wikimedia.org.
 mpic-next        1D IN CNAME dyna.wikimedia.org.
@@ -769,7 +775,6 @@ netbox-next      1D IN CNAME dyna.wikimedia.org.
 noc              1D IN CNAME dyna.wikimedia.org.
 old-bugzilla     1D IN CNAME dyna.wikimedia.org.
 one              1H IN CNAME messaging-wikimedia-org.go-vip.net.
-payments-listener.frdev 1H IN CNAME frdev-eqiad
 planet           1D IN CNAME dyna.wikimedia.org.
 ar.planet        1D IN CNAME dyna.wikimedia.org.
 bg.planet        1D IN CNAME dyna.wikimedia.org.
@@ -811,7 +816,6 @@ static-codereview  1D IN CNAME dyna.wikimedia.org.
 stats            1D IN CNAME dyna.wikimedia.org.
 status           5M  IN A        192.237.162.200 ; wmf-zone-validator-ignore=TOO_MANY_PUBLIC_NAMES,MISSING_PTR_FOR_NAME_AND_IP
 status           5M  IN AAAA     2001:4801:7821:77:be76:4eff:fe10:2ed5 ; wmf-zone-validator-ignore=TOO_MANY_PUBLIC_NAMES,MISSING_PTR_FOR_NAME_AND_IP
-superset.frdev   1H IN CNAME analytics-codfw.frdev
 techblog         5M IN CNAME techblog-wikimedia-org.go-vip.net.
 ticket           1D IN CNAME dyna.wikimedia.org.
 mirrors          5M IN CNAME mirror1001
