wikimediacloud.org: move codfw1dev rabbitmq cnames
Now we have dedicated hardware for this, move off of
cloudcontrols.

Bug: T392539
Change-Id: I21d33c6ae94d6f2554492355db6c5c1a3a2fa35d

--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -26,9 +26,9 @@ $ORIGIN codfw1dev.wikimediacloud.org.
 object 5M IN CNAME openstack ; object storage (Swift/S3)
 
 ; Rabbitmq nodes
-rabbitmq01 5M  IN CNAME  cloudcontrol2006-dev.private.codfw.wikimedia.cloud.
-rabbitmq02 5M  IN CNAME  cloudcontrol2004-dev.private.codfw.wikimedia.cloud.
-rabbitmq03 5M  IN CNAME  cloudcontrol2005-dev.private.codfw.wikimedia.cloud.
+rabbitmq01 5M  IN CNAME  cloudrabbit1001.private.codfw.wikimedia.cloud.
+rabbitmq02 5M  IN CNAME  cloudrabbit1002.private.codfw.wikimedia.cloud.
+rabbitmq03 5M  IN CNAME  cloudrabbit1003.private.codfw.wikimedia.cloud.
 
 nat.cloudgw         5M  IN A      185.15.57.1
 
