--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -26,9 +26,9 @@ $ORIGIN codfw1dev.wikimediacloud.org.
 object 5M IN CNAME openstack ; object storage (Swift/S3)
 
 ; Rabbitmq nodes
-rabbitmq01 5M  IN CNAME  cloudrabbit1001.private.codfw.wikimedia.cloud.
-rabbitmq02 5M  IN CNAME  cloudrabbit1002.private.codfw.wikimedia.cloud.
-rabbitmq03 5M  IN CNAME  cloudrabbit1003.private.codfw.wikimedia.cloud.
+rabbitmq01 5M  IN CNAME  cloudrabbit2001-dev.private.codfw.wikimedia.cloud.
+rabbitmq02 5M  IN CNAME  cloudrabbit2002-dev.private.codfw.wikimedia.cloud.
+rabbitmq03 5M  IN CNAME  cloudrabbit2003-dev.private.codfw.wikimedia.cloud.
 
 nat.cloudgw         5M  IN A      185.15.57.1
 
