community-crm: Add mx records
Now that mail delivery is configured, add the mx records so mail can be
sent through the mx-in hosts. Also shifts the main community-crm record
from CNAME to DYNA due to needing the additional records.

Bug: T383715
Change-Id: I298a5a71ea321aad463189d5b3399b242224289b

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -459,7 +459,9 @@ cloudtestidm    1D IN CNAME dyna.wikimedia.org.
 
 commons-query   1D IN CNAME dyna.wikimedia.org.
 
-community-crm   1D IN CNAME dyna.wikimedia.org.
+community-crm   300 IN DYNA geoip!text-addrs
+community-crm   300 IN MX   10 mx-in1001
+community-crm   300 IN MX   10 mx-in2001
 
 config-master   1D IN CNAME dyna.wikimedia.org.
 
