spf wikimedia.org: add community-crm SPF record
Add the standard SPF record to validate mail being sent from the
community-crm host. Keeps consistency with other services such as
phabricator and gitlab.

Bug: T383715
Change-Id: I6b1ec4314f1bc62cc9b494759633760a1f67d91e

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -463,6 +463,7 @@ commons-query   1D IN CNAME dyna.wikimedia.org.
 community-crm   240 IN DYNA geoip!text-addrs
 community-crm   300 IN MX   10 mx-in1001
 community-crm   300 IN MX   10 mx-in2001
+community-crm   1H  IN TXT  "v=spf1 include:_cidrs.wikimedia.org ~all"
 
 config-master   1D IN CNAME dyna.wikimedia.org.
 
