--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -332,7 +332,7 @@ measure-drmrs       1D IN CNAME upload-lb.drmrs.wikimedia.org.
 measure-magru       1D IN CNAME upload-lb.magru.wikimedia.org.
 
 ; HIBP confirm records
-gitlab 300 IN TXT "have-i-been-pwned-verification=dweb_36x21v820aq8mv0xpdt2mchf"
+dyna 240 IN TXT "hibp-verify=dweb_d3r8lususfqasuzn85gjxrtx"
 
 ; Mobile
 
