Add civi cname to civicrm for new standalone testing
Setting up the production alias so we can run both the current and
standalone version at the same time. This should be briefly used until
the transition next week.

Bug: T261779
Change-Id: I8d86e7a6b47f8e8426dec083c03544af06028ebf

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -246,6 +246,7 @@ payments-listener-eqiad     1H  IN A    208.80.155.19
 analytics-eqiad.frdev       1D  IN CNAME    analytics-eqiad
 analytics-codfw.frdev       1D  IN CNAME    analytics-codfw
 analytics.frdev             1H  IN CNAME    analytics-codfw.frdev
+civi                        1H  IN CNAME    civicrm
 civi.frdev                  1H  IN CNAME    frdev-eqiad
 civicrm.frdev               1H  IN CNAME    frdev-eqiad
 fundraising                 1H  IN CNAME    frdata-eqiad
