wikimedia: add CNAMEs for hcaptcha domains
The urldownloader hosts will be used for the time being.

Bug: T397841
Change-Id: I629cfcda4c1368e01d9de536a050630c3f3e9816

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -523,6 +523,12 @@ performance     1D IN CNAME dyna.wikimedia.org.
 horizon         1D IN CNAME dyna.wikimedia.org.
 wikitech        1D IN CNAME dyna.wikimedia.org.
 
+; hcaptcha T397841
+hcaptcha        1D IN CNAME dyna.wikimedia.org.
+assets.hcaptcha 1D IN CNAME dyna.wikimedia.org.
+imgs.hcaptcha   1D IN CNAME dyna.wikimedia.org.
+report.hcaptcha 1D IN CNAME dyna.wikimedia.org.
+
 icinga          5M  IN CNAME    alert1002
 icinga-extmon   5M  IN CNAME    alert1002
 
