--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -525,9 +525,9 @@ wikitech        1D IN CNAME dyna.wikimedia.org.
 
 ; hcaptcha T397841
 hcaptcha        1D IN CNAME dyna.wikimedia.org.
-assets.hcaptcha 1D IN CNAME dyna.wikimedia.org.
-imgs.hcaptcha   1D IN CNAME dyna.wikimedia.org.
-report.hcaptcha 1D IN CNAME dyna.wikimedia.org.
+assets-hcaptcha 1D IN CNAME dyna.wikimedia.org.
+imgs-hcaptcha   1D IN CNAME dyna.wikimedia.org.
+report-hcaptcha 1D IN CNAME dyna.wikimedia.org.
 
 icinga          5M  IN CNAME    alert1002
 icinga-extmon   5M  IN CNAME    alert1002
