prom/metamonitor: add CNAMEs for metamonitoring endpoints
Bug: T397003
Change-Id: I92f42833f5da8156f3fb34ce25bde4bf3d5ac338

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -548,6 +548,10 @@ irc             5M  IN CNAME    irc2003
 klaxon          5M  IN CNAME    alert1002
 requestctl      5M  IN CNAME    alert1002
 
+metamonitoring  5M  IN CNAME    alert1002
+metamonitoring-active  5M  IN CNAME    alert1002
+metamonitoring-passive 5M  IN CNAME    alert2002
+
 ldap-eqiad      1H  IN CNAME    seaborgium
 ldap-codfw      1H  IN CNAME    serpens
 
