create th.wikimedia.org for Wikimedia Thailand
Wikimedia Thailand (WMTH) is a recognized chapter
since 2019.

https://foundation.wikimedia.org/wiki/Resolution:Recognition_of_Wikimedians_in_Thailand_User_Group_as_a_Wikimedia_Chapter

Bug: T400001
Change-Id: I5089358df85cf460b12e95156f624b60d95f4355

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -397,6 +397,7 @@ species.m           1D IN CNAME dyna.wikimedia.org.
 steward.m           1D IN CNAME dyna.wikimedia.org.
 strategy.m          1D IN CNAME dyna.wikimedia.org.
 test-commons.m      1D IN CNAME dyna.wikimedia.org.
+th.m                1D IN CNAME dyna.wikimedia.org.
 tr.m                1D IN CNAME dyna.wikimedia.org.
 u4c.m               1D IN CNAME dyna.wikimedia.org.
 ua.m                1D IN CNAME dyna.wikimedia.org.
@@ -712,6 +713,7 @@ steward          1D IN CNAME dyna.wikimedia.org.
 strategy         1D IN CNAME dyna.wikimedia.org.
 techconduct      1D IN CNAME dyna.wikimedia.org.
 test-commons     1D IN CNAME dyna.wikimedia.org.
+th               1D IN CNAME dyna.wikimedia.org.
 tr               1D IN CNAME dyna.wikimedia.org.
 transitionteam   1D IN CNAME dyna.wikimedia.org.
 u4c              1D IN CNAME dyna.wikimedia.org.
