--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -624,6 +624,8 @@ url-downloader.eqiad  5M  IN CNAME urldownloader1004
 url-downloader.codfw  5M  IN CNAME urldownloader2004
 url-downloader        5M  IN CNAME url-downloader.eqiad
 
+zuul                  1D IN CNAME dyna.wikimedia.org.
+
 ; Wikis (alphabetic order)
 
 advisors         1D IN CNAME dyna.wikimedia.org.
