wikimedia.org: add hcaptcha-sentry CNAME
Bug: T397841
Change-Id: I07c41fe477f6266690f898063dd3e7642852ee62

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -532,6 +532,7 @@ hcaptcha        1D IN CNAME dyna.wikimedia.org.
 assets-hcaptcha 1D IN CNAME dyna.wikimedia.org.
 imgs-hcaptcha   1D IN CNAME dyna.wikimedia.org.
 report-hcaptcha 1D IN CNAME dyna.wikimedia.org.
+sentry-hcaptcha 1D IN CNAME dyna.wikimedia.org.
 
 icinga          5M  IN CNAME    alert1002
 icinga-extmon   5M  IN CNAME    alert1002
