dns: provision airflow-wikidata domain
We are provisioning a new airflow instance for the wikidata team, this sets up the airflow-wikidata
domain to be used to access the instance.

Bug: T404073
Change-Id: Ib04c082e837b132e421a3d04f97c83580d1df0c4

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -765,6 +765,7 @@ airflow-research 1D IN CNAME dyna.wikimedia.org.
 airflow-search 1D IN CNAME dyna.wikimedia.org.
 airflow-test-k8s 1D IN CNAME dyna.wikimedia.org.
 airflow-wmde 1D IN CNAME dyna.wikimedia.org.
+airflow-wikidata 1D IN CNAME dyna.wikimedia.org.
 analytics        1D IN CNAME dyna.wikimedia.org.
 blog             1H IN CNAME blog-wikimedia-org.go-vip.net.
 bugs             1D IN CNAME dyna.wikimedia.org.
