wikimediafoundation.org: verify search console ownership
Bug: T404974
Change-Id: I7d95ea93f29ce2c3b30ae5354651833a0d79c4fa

--- a/templates/wikimediafoundation.org
+++ b/templates/wikimediafoundation.org
@@ -21,6 +21,8 @@
 
 ; Facebook verification record (T258284)
 @           600 IN TXT  "facebook-domain-verification=orjhfudqyeumf4uber3bpwan5pisu0"
+; Search Console (T404974)
+@           600 IN TXT  "google-site-verification=M_SODfP3BPr-z8R-YmIdrbm_nEJDG6BpfRXsf-e6P8E"
 
 ; Account verification for Bluesky; see T384350
 _atproto    600 IN TXT  "did=did:plc:vwdzejaw4wkxh2wvkjlcubal"
