--- a/templates/wikimediafoundation.org
+++ b/templates/wikimediafoundation.org
@@ -23,6 +23,8 @@
 @           600 IN TXT  "facebook-domain-verification=orjhfudqyeumf4uber3bpwan5pisu0"
 ; Search Console (T404974)
 @           600 IN TXT  "google-site-verification=M_SODfP3BPr-z8R-YmIdrbm_nEJDG6BpfRXsf-e6P8E"
+; Search Console: ITS Service Account
+@           600 IN TXT  "google-site-verification=m7jEgoI4DOUy0u6cebxtp7oJT7s3nnNyPWgmPQmNEjc"
 
 ; Account verification for Bluesky; see T384350
 _atproto    600 IN TXT  "did=did:plc:vwdzejaw4wkxh2wvkjlcubal"
