--- a/templates/wikipedia.org
+++ b/templates/wikipedia.org
@@ -72,6 +72,7 @@ wg-en                   1D IN CNAME dyna.wikimedia.org.
 
 15              1D IN CNAME dyna.wikimedia.org.
 20              1D IN CNAME dyna.wikimedia.org.
+25              1D IN CNAME dyna.wikimedia.org.
 bugzilla        1D IN CNAME dyna.wikimedia.org.
 careers         1D IN CNAME dyna.wikimedia.org.
 commons         1D IN CNAME dyna.wikimedia.org.
