dmarc: set policy to reject
Change our DMARC policy to reject for the following domains:

Canonical:

  - mediawiki.org
  - w.wiki
  - wikibooks.org
  - wikidata.org
  - wikifunctions.org
  - wikimedia.org
    - donate.wikimedia.org
  - wikimediafoundation.org
  - wikinews.org
  - wikipedia.org
  - wikiquote.org
  - wikisource.org
  - wikiversity.org
  - wikivoyage.org
  - wiktionary.org
  - wmfusercontent.org

Non-canonical:

  - wikimedia.community
  - wikimedia.social
  - wikimedia.support

Set TTL to 600, so a revert, if necessary, is a bit shorter.

Bug: T404884
Change-Id: I8a3a078b44a5c0ce02be657c5ad7ed99b5964c27

--- a/templates/wikipedia.org
+++ b/templates/wikipedia.org
@@ -26,7 +26,7 @@
 _atproto                            600 IN TXT   "did=did:plc:plla3i7zproko3ekdnkoykhe"
 
 ; DMARC record
-_dmarc                  600     IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc                  600     IN TXT "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; SPF records
 ; VRTS uses the wikipedia.org domain as a From address
