--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -99,7 +99,7 @@ k2._domainkey       1H IN CNAME dkim2.mcsv.net.
 k3._domainkey       1H IN CNAME dkim3.mcsv.net.
 
 ; DMARC record
-_dmarc          600  IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc          600  IN TXT "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; DMARC external domain verification for other WMF domains delivering to @wikimedia.org
 mediawiki.org._report._dmarc            1H  IN TXT "v=DMARC1;"
@@ -227,7 +227,7 @@ donate          300 IN MX       10 mx-in2001
 donate          5M  IN TXT  "v=spf1 ip4:185.15.59.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
 ; Google site verification for https://postmaster.google.com
 donate          300 IN TXT  "google-site-verification=JjhlduqLloGdWYGuMopl6ZyeNHh5Exph9dISsMGSo90"
-_dmarc.donate   600 IN TXT  "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc.donate   600 IN TXT  "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; Servers (alphabetic order) << WHAT PART ABOUT THIS IS SO HARD TO UNDERSTAND?
 
