--- a/templates/wikimediafoundation.org
+++ b/templates/wikimediafoundation.org
@@ -17,7 +17,7 @@
 @           600 IN TXT  "v=spf1 include:wikimedia.org ~all"
 
 ; DMARC record
-_dmarc      600 IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc      600 IN TXT "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; Canonical names
 @           600  IN A    192.0.66.2
