dmarc: add dmarc monitoring records to more domains
Add dmark monitoring only records to an inital set of domains
to monitor:

  - mediawiki.org
  - wikimedia.cloud
  - wikimedia.community
  - wikimedia.social
  - wikimedia.support
  - wikimediacloud.org
  - wikimediafoundation.org
  - wikinews.org
  - wikiquote.org
  - wikisource.org
  - wikiversity.org
  - wikivoyage.org
  - wiktionary.org

Bug: T404884
Change-Id: I2361adfd6e7b77fb610de49dde3ac3875783c305

--- a/templates/mediawiki.org
+++ b/templates/mediawiki.org
@@ -23,6 +23,9 @@
 ; SPF records
 @               600 IN TXT  "v=spf1 include:wikimedia.org ~all"
 
+; DMARC record
+_dmarc      1H  IN TXT "v=DMARC1; p=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+
 ; CAA records
 @           600 IN CAA 0 issue "digicert.com"
 @           600 IN CAA 0 issue "letsencrypt.org"
