--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -11,6 +11,9 @@
 @           600 IN CAA 0 issue "letsencrypt.org"
 @           600 IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
 
+; DMARC record
+_dmarc      1H  IN TXT "v=DMARC1; p=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+
 ; See https://wikitech.wikimedia.org/wiki/DNS/Netbox
 $INCLUDE netbox/wikimediacloud.org-eqiad
 $INCLUDE netbox/wikimediacloud.org-codfw
