--- a/templates/wikimediafoundation.org
+++ b/templates/wikimediafoundation.org
@@ -16,6 +16,9 @@
 ; SPF records
 @           600 IN TXT  "v=spf1 include:wikimedia.org ~all"
 
+; DMARC record
+_dmarc      1H  IN TXT "v=DMARC1; p=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+
 ; Canonical names
 @           600  IN A    192.0.66.2
 
