dmarc: set policy to quaratine
Change our DMARC policy to quarantine for the following domains:

Canonical:

  - mediawiki.org
  - w.wiki
  - wikibooks.org
  - wikidata.org
  - wikifunctions.org
  - wikimedia.org
    - donate.wikimedia.org
  - wikimediafoundation.org
  - wikinews.org
  - wikipedia.org
  - wikiquote.org
  - wikisource.org
  - wikiversity.org
  - wikivoyage.org
  - wiktionary.org
  - wmfusercontent.org

Non-canonical:

  - wikimedia.community
  - wikimedia.social
  - wikimedia.support

Set TTL to 600, so a revert, if necessary, is a bit shorter.

Bug: T404884
Change-Id: I0567e7a14343b9c6a3c907c1c882d469cdf535f1

--- a/templates/wikipedia.org
+++ b/templates/wikipedia.org
@@ -25,6 +25,7 @@
 ; Bluesky account verification. This record proves our ownership of the @wikipedia.org account to Blusky/AT Protocol
 _atproto                            600 IN TXT   "did=did:plc:plla3i7zproko3ekdnkoykhe"
 
+; DMARC record
 _dmarc                  600     IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; SPF records
