--- a/templates/mediawiki.org
+++ b/templates/mediawiki.org
@@ -24,7 +24,7 @@
 @               600 IN TXT  "v=spf1 include:wikimedia.org ~all"
 
 ; DMARC record
-_dmarc      1H  IN TXT "v=DMARC1; p=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc          600 IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; CAA records
 @           600 IN CAA 0 issue "digicert.com"
