--- a/templates/w.wiki
+++ b/templates/w.wiki
@@ -22,8 +22,8 @@
 ; SPF txt and rr records
 @           600 IN TXT  "v=spf1 -all"
 
-; DMARC records http://dmarc.org/ -- policy none (monitor), for now
-_dmarc                  600     IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+; DMARC record
+_dmarc      600 IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; CAA records
 @           600 IN CAA 0 issue "digicert.com"
