--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -91,12 +91,15 @@ n1j3._domainkey     1H IN CNAME dkim3.327bdf87d37c.p413.email.myshopify.com.
 k2._domainkey       1H IN CNAME dkim2.mcsv.net.
 k3._domainkey       1H IN CNAME dkim3.mcsv.net.
 
-; DMARC records http://dmarc.org/ -- policy none (monitor), for now
-_dmarc          1H  IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+; DMARC record
+_dmarc          600  IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; DMARC external domain verification for other WMF domains delivering to @wikimedia.org
 mediawiki.org._report._dmarc            1H  IN TXT "v=DMARC1;"
 w.wiki._report._dmarc                   1H  IN TXT "v=DMARC1;"
+wikibooks.org._report._dmarc            1H  IN TXT "v=DMARC1;"
+wikidata.org._report._dmarc             1H  IN TXT "v=DMARC1;"
+wikifunctions.org._report._dmarc        1H  IN TXT "v=DMARC1;"
 wikimedia.cloud._report._dmarc          1H  IN TXT "v=DMARC1;"
 wikimedia.community._report._dmarc      1H  IN TXT "v=DMARC1;"
 wikimedia.social._report._dmarc         1H  IN TXT "v=DMARC1;"
@@ -110,6 +113,7 @@ wikisource.org._report._dmarc           1H  IN TXT "v=DMARC1;"
 wikiversity.org._report._dmarc          1H  IN TXT "v=DMARC1;"
 wikivoyage.org._report._dmarc           1H  IN TXT "v=DMARC1;"
 wiktionary.org._report._dmarc           1H  IN TXT "v=DMARC1;"
+wmfusercontent.org._report._dmarc       1H  IN TXT "v=DMARC1;"
 
 ; Mail records for pr.wikimedia.org
 pr   300 IN MX 10 mx-in1001
@@ -191,6 +195,7 @@ lists           5M  IN A    208.80.154.81
 lists           5M  IN AAAA 2620:0:861:3:208:80:154:81
 lists           1H  IN MX   10 lists
 lists           1H  IN TXT  "v=spf1 mx ~all"
+; DMARC record, keep none policy for now, as more work is required, https://phabricator.wikimedia.org/T379517
 _dmarc.lists    1H  IN TXT "v=DMARC1; p=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 _domainkey.lists        1H  IN TXT  "o=~; r=postmaster@wikimedia.org;"
 _adsp._domainkey.lists  1H  IN TXT  "dkim=unknown;"
@@ -215,7 +220,7 @@ donate          300 IN MX       10 mx-in2001
 donate          5M  IN TXT  "v=spf1 ip4:185.15.59.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
 ; Google site verification for https://postmaster.google.com
 donate          300 IN TXT  "google-site-verification=JjhlduqLloGdWYGuMopl6ZyeNHh5Exph9dISsMGSo90"
-_dmarc.donate   1H  IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc@donate.wikimedia.org;"
+_dmarc.donate   600 IN TXT  "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; Servers (alphabetic order) << WHAT PART ABOUT THIS IS SO HARD TO UNDERSTAND?
 
