--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -805,7 +805,9 @@ diff             1H IN CNAME blog-wikimedia-org.go-vip.net.
 download         1D IN CNAME dyna.wikimedia.org.
 etherpad         1D IN CNAME dyna.wikimedia.org.
 growthbook       1D IN CNAME dyna.wikimedia.org.
+growthbook-next  1D IN CNAME dyna.wikimedia.org.
 growthbook-api   1D IN CNAME dyna.wikimedia.org.
+growthbook-api-next 1D IN CNAME dyna.wikimedia.org.
 jobs             1D IN CNAME dyna.wikimedia.org.
 labs             1D IN CNAME dyna.wikimedia.org.
 ; deprecated but kept for compatibility, see RT #6769
