--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -184,6 +184,7 @@ _45077a66a799e60855d7546ffdab9847.lp.email 1M IN CNAME _6f10127d42f52c65ff9c62e5
 dyna            180 IN DYNA geoip!text-addrs
 
 dumps           1H  IN CNAME clouddumps1002
+dumps-rsync     1H  IN CNAME clouddumps1002
 
 lists           5M  IN A    208.80.154.81
 lists           5M  IN AAAA 2620:0:861:3:208:80:154:81
