--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -523,8 +523,7 @@ ldap-rw-next.codfw   1H  IN CNAME    ldap-rw2001
 
 ; Gerrit records
 gerrit                  300 IN TXT      "google-site-verification=ln5JczWUiGqT4sK3yohGgNDKCtUixySt94iBjJKrfak"
-gerrit                  300 IN A        208.80.154.151
-gerrit                  300 IN AAAA     2620:0:861:2:208:80:154:151
+gerrit                  180 IN DYNA     geoip!gerrit-addrs
 gerrit-replica          300 IN A        208.80.153.104
 gerrit-replica          300 IN AAAA     2620:0:860:4:208:80:153:104
 gerrit-spare            300 IN A        208.80.153.111
