unlink wikipedia25.org from ncredir, point to geoip text-addrs
wikipedia25.org and www.wikipedia25.org are supposed to redirect
until Jan 15 when they will be switched over to the miscweb service
on k8s-wikikube.

donate.wikipedia25.org needs to stay the redirect that it is now, on
ncredir.

Therefore we need to create a zone for wikipedia25.org and replace
the existing symlink to ncredir with it.

CAA records are needed.

Bug: T408592
Bug: T408168
Change-Id: I4c8ec2c5f6bbca511a41deb0bcdb8407c1ff792d

--- a/templates/wikipedia25.org
+++ b/templates/wikipedia25.org
@@ -1,1 +1,22 @@
-ncredir-parking
+; vim: set expandtab:smarttab
+; {{ serial_comment }}
+@ 1H IN SOA ns0.wikimedia.org. hostmaster.wikimedia.org. {{ serial_num }} 12H 2H 2W 1H
+
+; Name servers
+
+@           1D  IN NS   ns0.wikimedia.org.
+@           1D  IN NS   ns1.wikimedia.org.
+@           1D  IN NS   ns2.wikimedia.org.
+
+; T408592
+@           180 IN DYNA geoip!text-addrs
+www         180 IN DYNA geoip!text-addrs
+
+; T408168
+donate      1D IN CNAME ncredir-lb.wikimedia.org.
+
+
+; CAA records for wikipedia25.org - LE
+@           5M  IN CAA 0 issue "letsencrypt.org"
+@           5M  IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
+
