wikimediafoundation.org: Add AAAA for non-apex records as well
Follow-up to 9d3506c which added the record to the apex.

Bug: T403269
Change-Id: Iab10c951c4dc0800a224c5594db9223b7c446f94

--- a/templates/wikimediafoundation.org
+++ b/templates/wikimediafoundation.org
@@ -56,4 +56,6 @@ fundraising._domainkey  1H  IN TXT  "v=DKIM1; h=sha256; k=rsa; p=MIGfMA0GCSqGSIb
 ; Wikis (alphabetic order)
 
 www         600  IN A     192.0.66.2
+www         600  IN AAAA  2a04:fa87:fffd::c000:4280
 m           600  IN A     192.0.66.2
+m           600  IN AAAA  2a04:fa87:fffd::c000:4280
