wikimedia/wikipedia.org: match TTLs for NS and glue records
Our NS and glue records have a TTL of 3600s/1h, as set by the domain
registrar Markmonitor. In our zone files though, there is a disparity,
which bblack pointed out in T81605. It seems we are setting TTLs of 1D
here and we never matched them to what is actually in the registrar/org
servers.

Since we are planning to start providing the auth servers over IPv6,
let's first unify the TTLs to what is there upstream and then we can
normalize all of them to a standard TTL of 2D.

Here is how it looks like upstream:

wikipedia.org (NS):

ns0.wikimedia.org.	3600	IN	A	208.80.154.238
ns1.wikimedia.org.	3600	IN	A	208.80.153.231
ns2.wikimedia.org.	3600	IN	A	198.35.27.27

wikimedia.org (glue, NS):

ns0.wikimedia.org.	3600	IN	A	208.80.154.238
ns1.wikimedia.org.	3600	IN	A	208.80.153.231
ns2.wikimedia.org.	3600	IN	A	198.35.27.27

wikimedia.org.		3600	IN	NS	ns2.wikimedia.org.
wikimedia.org.		3600	IN	NS	ns0.wikimedia.org.
wikimedia.org.		3600	IN	NS	ns1.wikimedia.org.

Bug: T81605
Change-Id: Ic641b473222882a73e92a5cd99ee9016dd84355d

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -4,12 +4,12 @@
 
 ; Name servers
 
-@           1D  IN NS   ns0
-@           1D  IN NS   ns1
-@           1D  IN NS   ns2
-ns0         1D  IN A    208.80.154.238
-ns1         1D  IN A    208.80.153.231
-ns2         1D  IN A    198.35.27.27 ; anycasted authdns
+@           1H  IN NS   ns0
+@           1H  IN NS   ns1
+@           1H  IN NS   ns2
+ns0         1H  IN A    208.80.154.238
+ns1         1H  IN A    208.80.153.231
+ns2         1H  IN A    198.35.27.27 ; anycasted authdns
 
 ; Mail exchangers
 
