add abstract.wikipedia.org to section for wikis not covered by langlist
This is requested as a wiki. But it's not a language.

Note there is also a section for "wikis without mobile site" right below
but since there are no more mobile sites nowadays.. both should be merged in the future?

Bug: T411724
Change-Id: I35fce290bf3bb7d6bcd87cd1b46c3847cc400842

--- a/templates/wikipedia.org
+++ b/templates/wikipedia.org
@@ -40,6 +40,7 @@ _dmarc                  600     IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc
 
 ; Wikis with mobile site (alphabetic order), which are not covered by langlist.tmpl
 
+abstract                1D IN CNAME dyna.wikimedia.org.
 arbcom-cs               1D IN CNAME dyna.wikimedia.org.
 arbcom-cs.m             1D IN CNAME dyna.wikimedia.org.
 arbcom-de               1D IN CNAME dyna.wikimedia.org.
